@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+July 22, 2011
+! [mickael] correct some troubles about thirdparty when they are used
+
 July 21, 2011
 ! [mickael] correct a compil error linked to getopt with win platform
 !+ [mickael] add new decode tests based on conformance data and tolerance. Non regression is also added on the decoder output. Deactivate old tests.
